dark mode fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,11 +86,11 @@ html[data-theme='light'] {
 }
 
 
-html[data-theme="light"] .docPage_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-styles-module {
+html[data-theme="light"] .docPage__5DB, html[data-theme="light"] .docPage_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-styles-module {
   background: linear-gradient(180deg, var(--ifm-light-background), #f1f1f1);
 }
 
-html[data-theme="dark"] .docPage_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-styles-module {
+html[data-theme="dark"] .docPage__5DB, html[data-theme="dark"] .docPage_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-styles-module {
   background: linear-gradient(180deg, var(--ifm-dark-background), #0c0c0c);
 }
 
@@ -158,6 +158,7 @@ code {
 
 .markdown a.link,
 .tagRegular_node_modules-\@docusaurus-theme-classic-lib-theme-Tag-styles-module,
+.tagRegular_sFm0,
 td a, .markdown a code {
   color: var(--ifm-body-background);
   background: var(--ifm-color-primary-light);
@@ -175,7 +176,7 @@ td a, .markdown a code {
 }
 
 .markdown a.link:hover,
-.tagRegular_node_modules-\@docusaurus-theme-classic-lib-theme-Tag-styles-module:hover,
+.tagRegular_node_modules-\@docusaurus-theme-classic-lib-theme-Tag-styles-module:hover, .tagRegular_sFm0:hover,
 .markdown table a[target="_blank"], .markdown a[target="_blank"] code {
   padding: 2px 6px !important;
   border: 2px solid var(--ifm-color-primary-dark) !important;
@@ -350,8 +351,8 @@ aside {
   border: 1px solid rgba(124, 124, 124, 0.3) !important;
 }
 
-html[data-theme='light'] .sidebarViewport_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module, .sidebarViewport_Xe31,
-html[data-theme='light'] .expandButton_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-ExpandButton-styles-module, .expandButton_m80_ {
+html[data-theme='light'] .sidebarViewport_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-styles-module, html[data-theme='light'] .sidebarViewport_Xe31,
+html[data-theme='light'] .expandButton_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Sidebar-ExpandButton-styles-module, html[data-theme='light'] .expandButton_m80_ {
   background: rgba(255, 255, 255, 0.5) !important;
 }
 
